# hermes-team

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
orchestrator/: __init__.py  agent.py  cli.py  config.py  docker.py  manager.py  registry.py
orchestrator/scaffold/: __init__.py  docker-compose.yml  entrypoint.sh  hermes-team.yaml
orchestrator/scaffold/skills/create-sub-agent-skill/: SKILL.md
orchestrator/scaffold/skills/kanban-orchestrator/: SKILL.md
orchestrator/scaffold/skills/kanban-worker/: SKILL.md
orchestrator/scaffold/tools/: create_agent.py  list_profiles.py
skills/create-sub-agent-tool/: SKILL.md
tests/: conftest.py  test_cli.py  test_delegation.py  test_manager.py  test_registry.py
tools/: create_agent.py  product_research_pipeline.py  synthesize.py
